--- a/client/src/components/shared/Header/Header.css
+++ b/client/src/components/shared/Header/Header.css
@@ -3,6 +3,11 @@
   height: 100px;
 }
 
+.header-login {
+  background-color:  #32362D;
+  height: 100px;
+}
+
 #login {
   background-color: #53352D;
   color: #FFFFFF;
