--- a/client/src/components/shared/Header/Header.css
+++ b/client/src/components/shared/Header/Header.css
@@ -16,6 +16,14 @@
   display: flex;
   align-items: center;
   padding-left: 50px;
+  font-size: 45px;
+}
+
+#logo-login {
+  display: flex;
+  align-items: center;
+  padding-left: 50px;
+  font-size: 45px;
 }
 
 .home-login-register {
@@ -26,7 +34,7 @@
   padding-right: 20px;
 }
 
-#login {
+#login-button {
   background-color: #53352d;
   color: #ffffff;
   width: 150px;
@@ -36,7 +44,7 @@
   font-size: 23px;
 }
 
-#register {
+#register-button {
   background-color: #53352d;
   color: #ffffff;
   width: 150px;
@@ -66,5 +74,34 @@
   font-size: 23px;
 }
 
+#solo-register-button {
+  background-color: #53352d;
+  color: #ffffff;
+  width: 150px;
+  height: 35px;
+  border: 1px;
+  border-radius: 10px;
+  font-size: 23px;
+  margin-top: 30px;
+  margin-right: 50px;
+}
+
+#solo-login-button {
+  background-color: #53352d;
+  color: #ffffff;
+  width: 150px;
+  height: 35px;
+  border: 1px;
+  border-radius: 10px;
+  font-size: 23px;
+  margin-top: 30px;
+  margin-right: 50px;
+}
+
 .user-buttons {
+  display: flex;
+  align-items: center;
+  width: 13%;
+  justify-content: space-between;
+  padding-right: 20px;
 }
