header for logged in users has been restyled

--- a/client/src/components/shared/Header/Header.css
+++ b/client/src/components/shared/Header/Header.css
@@ -9,7 +9,7 @@
   background-color: #32362d;
   height: 100px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 #logo {
