--- a/client/src/components/shared/Footer/Footer.css
+++ b/client/src/components/shared/Footer/Footer.css
@@ -1,7 +1,5 @@
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
-  height: 11.5rem;
-  background-color: #F4F2E9;
+  height: 185px;
+  background-color: #f4f2e9;
 }
