--- a/client/src/screens/AddBooks/AddBooks.css
+++ b/client/src/screens/AddBooks/AddBooks.css
@@ -15,8 +15,7 @@
   max-width: 1000px;
   height: 500px;
   padding: 20px;
-  margin: 0 auto;
-  margin-top: 6%;
+  margin: 100px auto 0 auto;
   background-color: #32362d;
 }
 
@@ -74,4 +73,8 @@
   border: 1px;
   border-radius: 4px;
   font-size: 19px;
+}
+@media only screen and (max-width: 989px) {
+}
+@media only screen and (max-width: 767px) {
 }
