--- a/client/src/screens/MyShelf/MyShelf.css
+++ b/client/src/screens/MyShelf/MyShelf.css
@@ -1,3 +1,25 @@
+.myshelf-title {
+  background: #f4f2e9;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#myshelf-message {
+  font-size: 50px;
+}
+
+.myshelf-container {
+  padding: 0 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 1300px;
+  justify-content: space-between;
+  margin: 100px auto;
+}
+
 .myshelf-img {
   height: 150px;
   width: 100px;
