--- a/client/src/screens/Login/login.css
+++ b/client/src/screens/Login/login.css
@@ -50,3 +50,12 @@
   border: 1px;
   border-radius: 4px;
 }
+
+@media only screen and (max-width: 989px) {
+}
+@media only screen and (max-width: 767px) {
+  #login-username-box,
+  #login-password-box {
+    width: 100%;
+  }
+}
